[package]
name = "root"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"

[dependencies]
reqwest = "0.11.26"
rocket = { version = "0.5", features = ["json"] }
serde_json = "1.0.114"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }